examples/private_generics/integration-tests/private_generics.exp
error: resource type "Data" in function "0x34141::Test1::create_box" not defined in current module or not allowed
   ┌─ /tmp/tempfile.move:62:23
   │
62 │         let box_val = create_box<Data, Data, Box<u32>>(data);
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


processed 2 tasks

task 1 'run'. lines 3-14:
Error: error: unresolved spec target
    ┌─ /Users/system/Downloads/rooch/examples/private_generics/../../moveos/moveos-stdlib/moveos-stdlib/sources/type_info.move:140:10
    │
140 │     spec verify_type_of_generic {
    │          ^^^^^^^^^^^^^^^^^^^^^^

error: resource type "Data" in function "0x34141::Test1::create_box" not defined in current module or not allowed
   ┌─ /Users/system/Downloads/rooch/examples/private_generics/sources/private_generics.move:62:23
   │
62 │         let box_val = create_box<Data, Data, Box<u32>>(data);
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


